--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
    container_name: airbnb_container
    volumes:
      - .:/home/airbnb
+     - ./node_modules:/home/airbnb/node_modules
    ports:
      - 3000:3000
    command: npm run dev
