Login and Register functionalities are working now.

--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@ NEXTAUTH_SECRET=some
 
 NODE_ENV=development
 
-GITHUB_ID=some
-GITHUB_SECRET=some
+GITHUB_ID=f4ffffc7b7abc330ed07
+GITHUB_SECRET=3745a85b6f2620950d548f0a7fd925805c4142cc
 
-GOOGLE_CLIENT_ID=some
-GOOGLE_CLIENT_SECRET=some
+GOOGLE_CLIENT_ID=907260854321-eapnold0gsc37ponrprntok92o380987.apps.googleusercontent.com
+GOOGLE_CLIENT_SECRET=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
